syntax = "proto3";

option java_multiple_files = true;
option java_package = "approval";

service ApprovalService {
  rpc CreateApproval(CreateApprovalRequest) returns (CreateApprovalResponse);
  rpc UpdateApproval(UpdateApprovalRequest) returns (UpdateApprovalResponse);
}

  message CreateApprovalRequest {
    string id = 1;
    string name = 2;
    string status = 3;
    string details = 4;
  }

  message CreateApprovalResponse {
    string id = 1;
    string status = 2;
  }
message UpdateApprovalRequest {
  string id = 1;
  string status = 2;
  string details = 3;
}

message UpdateApprovalResponse {
  string id = 1;
  string status = 2;
}
